--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "test": "eslint --ignore-path .gitignore --ext .js,.jsx .",
     "fix": "eslint --ignore-path .gitignore --ext .js,.jsx . --fix",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|json)\""
