--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "browserslist": "> 0.25%",
   "dependencies": {
+    "classnames": "^2.3.1",
     "d3": "^6.7.0",
     "next": "^10.0.9",
     "next-transpile-modules": "^7.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sass": "^1.34.1",
     "swr": "^0.5.6"
   },
   "scripts": {
